# deepfake-recognition

./: .gitignore  README.md  README_v4.md  baseline.py  clip_dct_unfreeze.py  config.json  final.ipynb  final_submission_1.csv  final_submission_2.csv  final_submission_b4.csv  final_submission_clip_dct.csv  pyproject.toml
configs/: base.yaml  clip_vit_b32.yaml  clip_vit_b32_dct.yaml  clip_vit_b32_unfreeze.yaml  convnext_base.yaml  dino_vitl14.yaml  dino_vitl14_avg.yaml  dino_vitl14_blur.yaml  dino_vitl14_deep.yaml  efficientnet_b4_dct.yaml  ensemble.yaml
outputs/: submission.csv
outputs/baseline/: predictions_probs.csv  submission.csv
outputs/clip_dct_unfreeze/: predictions_probs.csv  submission.csv  submission_t3.csv  submission_t4.csv  submission_t5.csv  submission_t6.csv  submission_tta.csv  submission_tta_t3.csv  submission_tta_t5.csv  submission_tta_t6.csv
outputs/clip_vit_b32_dct/: predictions_probs.csv  submission.csv  submission_t3.csv  submission_t4.csv  submission_t5.csv  submission_t6.csv
outputs/convnext_base/: predictions_probs.csv  submission_t3.csv  submission_t6.csv
outputs/dino_vitl14/: predictions_probs.csv  submission.csv  submission_t3.csv  submission_t4.csv  submission_t5.csv  submission_t6.csv
outputs/efficientnet_b4_dct/: predictions_probs.csv  submission.csv  submission_t3.csv  submission_t4.csv  submission_t5.csv  submission_t6.csv
src/: __init__.py  convert_submission.py  convert_to_kaggle.py  ensemble.py  ensemble_inference.py  ensemble_v2.py  inference.py  inference_v2.py  train.py  train_v2.py
src/models/: __init__.py  base.py  (+8 more)
(+51 files in other folders)
